--- a/carrito.html
+++ b/carrito.html
@@ -50,10 +50,10 @@
         <div class="jumbotron">
             <div class="platita">
                 <h1 class="display-4">¡Paso final !</h1>
-                <p class="lead">Estas a punto de pagar con paypal:
-                    <h4 class="totalPaypal">
+                <p class="lead">Estas a punto de pagar con paypal
+                    <!-- <h4 class="totalPaypal">
             
-                    </h4>
+                    </h4> -->
                 </p>
             </div>
             <div id="paypal-button-container"></div> 
